# ModuSLAM

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.txt  gitflic-ci.yaml  pyproject.toml  requirements_conda.txt  requirements_pip.txt  setup.cfg
.github/: requirements.txt
.github/workflows/: docs.yaml  docs_build.yaml  docs_build_deploy.yaml  docs_deploy.yaml  tests_runner.yaml
configs/: 1_lidar_imu.yaml  2_lidar.yaml  2_lidar_imu.yaml  2_lidar_imu_vrs.yaml  2_lidar_vrs.yaml  base_config.py  config.py  config.yaml  lidar.yaml  lidar_imu_vrs.yaml  lidar_vrs.yaml  main_config.py  stereo.yaml  stereo_imu.yaml  stereo_imu_lidar.yaml  vrs_imu.yaml
configs/data_manager/: batch_factory.yaml  config.yaml  kaist.yaml  ros2.yaml  tum_vie.yaml
configs/frontend_manager/: 2_lidar.yaml  2_lidar_imu.yaml  2_lidar_imu_vrs.yaml  2_lidar_vrs.yaml  config.yaml  lidar.yaml  lidar_imu.yaml  lidar_imu_vrs.yaml  lidar_vrs.yaml  ros2_lidar_imu.yaml  state_analyzers.yaml  stereo.yaml  stereo_imu.yaml  vrs_imu.yaml
configs/handlers/: imu_preintegrator.yaml  lidar_odometry.yaml
configs/map_manager/: config.yaml
configs/paths/: DEFAULT_FILE_PATHS.py  default.py  kaist_dataset.py
configs/sensors/: altimeter.py  base_sensor_parameters.py  camera.yaml  encoder.py  fog.py  gps.py  imu.py  imu.yaml  lidar_2D_back.yaml  lidar_3D_left.yaml  lidar_3D_right.yaml  lidar_vlp16_3D_left.yaml  lidar_vlp16_3D_right.yaml  lidar_vlp32c_3D_center.yaml  sick_back.py  sick_middle.py  stereo.py  stereo_camera.yaml  velodyne_left.py  velodyne_right.py  vrs_gps.py  vrs_gps.yaml
configs/setup_manager/: 2_lidar.yaml  2_lidar_imu.yaml  2_lidar_imu_vrs.yaml  2_lidar_vrs.yaml  edge_factories_initializer.yaml  handlers_factory.yaml  lidar.yaml  lidar_imu.yaml  lidar_imu_vrs.yaml  lidar_vrs.yaml  ros2_lidar_imu.yaml  sensors_factory.yaml  state_analyzers_factory.yaml  stereo.yaml  stereo_imu.yaml  vrs_imu.yaml
configs/state_analyzers/: lidar_odometry.yaml
configs/system/: main_manager.py
configs_yaml/: config.yaml  paths.yaml
configs_yaml/data_manager/: batch_factory.yaml  time_limit.yaml
configs_yaml/handlers/: imu_preintegrator.yaml  lidar_odometry.yaml
configs_yaml/sensors/: altimeter.yaml  encoder.yaml  fog.yaml  gps.yaml  imu.yaml  lidar_2D_back.yaml  lidar_2D_middle.yaml  lidar_3D_left.yaml  lidar_3D_right.yaml  stereo_camera.yaml  vrs_gps.yaml
configs_yaml/setup_manager/: handlers_factory.yaml  sensors_factory.yaml  state_analyzers_factory.yaml
configs_yaml/state_analyzers/: imu_preintegration.yaml  lidar_odometry.yaml
current_experiment/: lidars_imu_gpstrajectory.txt
data/: test_data.csv
diagrams/: .$Managment_Activity.drawio.bkp  .$SetupManager.drawio.bkp  .$setup_main.drawio.bkp
diagrams/BackendManager/: .$BackendManager.drawio.bkp  BackendManager.drawio
diagrams/DataManager/: .$DataManager.drawio.bkp  DataManager.drawio
diagrams/FrontendManager/: .$FrontendManager.drawio.bkp  FrontendManager.drawio
diagrams/MainManager/: .$MainManager.drawio.bkp  .$ProcessController.drawio.bkp  MainManager.drawio  ProcessController.drawio
diagrams/MapManager/: MapManager.drawio
diagrams/Pipeline/: .$pipeline.drawio.bkp  pipeline.drawio
diagrams/SetupManager/: .$SetupManager.drawio.bkp  SetupManager.drawio
docs/: conf.py  index.rst  manual.txt  modules.rst  slam.backend_manager.rst  slam.data_manager.factory.rst  slam.data_manager.rst  slam.frontend_manager.graph.rst  slam.frontend_manager.graph_builder.builders.rst  slam.frontend_manager.graph_builder.candidate_factory.factories.rst  slam.frontend_manager.graph_builder.candidate_factory.rst  slam.frontend_manager.graph_builder.candidate_factory.state_analyzers.rst  slam.frontend_manager.graph_builder.edges_factories.rst  slam.frontend_manager.graph_builder.graph_merger.rst  slam.frontend_manager.graph_builder.rst  slam.frontend_manager.handlers.kiss_icp_tests.rst  slam.frontend_manager.handlers.rst  slam.frontend_manager.rst  slam.rst  slam.setup_manager.rst  slam.setup_manager.sensors_factory.rst  slam.system_configs.rst  slam.system_configs.system.backend_manager.rst  slam.system_configs.system.data_manager.batch_factory.datasets.kaist.rst  slam.system_configs.system.data_manager.batch_factory.datasets.rst  slam.system_configs.system.data_manager.batch_factory.rst  slam.system_configs.system.data_manager.rst  slam.system_configs.system.frontend_manager.edge_factories.rst  slam.system_configs.system.frontend_manager.element_distributor.rst  slam.system_configs.system.frontend_manager.graph_builder.candidate_factory.rst  slam.system_configs.system.frontend_manager.graph_builder.graph_merger.rst  slam.system_configs.system.frontend_manager.graph_builder.point_cloud_builder.rst  slam.system_configs.system.frontend_manager.graph_builder.rst  slam.system_configs.system.frontend_manager.handlers.rst  slam.system_configs.system.frontend_manager.rst  slam.system_configs.system.map_manager.rst  slam.system_configs.system.rst  slam.system_configs.system.setup_manager.rst  slam.utils.rst
docs/diagrams/: .$FrontendManager.drawio.bkp  .$Main_Manager.drawio.bkp  .$Managers.drawio.bkp  .$MapManager.drawio.bkp  .$pipeline.drawio.bkp
examples/: VO_smart_factor_example.py  sandbox.py  script.py  vo_2.py
experiments/: lidar_map.ply  watch.py
final_experiments/: image_cutter.py  watch.py
moduslam/: db3checker.py  run.py  sandbox.py
paper/: main.tex  plan.tex
phd/: exceptions.py  run.py  sandbox.py  test.py
slam/: data_manager.py  run.py  sandbox.py  test.py
src/: angle.py  asdasd.py  run.py  sandbox.py  test.py
test_data_generators/: utils.py
tests/: conftest.py
tests_data/: __init__.py
tests_data_generators/: utils.py
third party/: requirements.txt
(+2151 files in other folders)
