[metadata]
name = slam
version = 0.0.1
author = Mark Griguletskii
author_email = mark.griguletskii@skoltech.ru
description = python framework for graph-based localization and mapping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fatrybl/mySLAM
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    = .

python_requires = >=3.8
include_package_data = False
install_requires =
    numpy
;     pathlib2
;     opencv-python

[options.extras_require]
test =
    pytest
    coverage

; [options.entry_points]
; console_scripts =
;         mySLAM = mySLAM.system_runner.run:main